Fix hr and inline-flex(add vertical-align)

--- a/src/css/blocks/_horizontal-rule.css
+++ b/src/css/blocks/_horizontal-rule.css
@@ -1,4 +1,4 @@
-.horizontal-rule {
+hr, .horizontal-rule {
   height: 1px;
   border: 0;
   padding: 0;
